// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`rendered AGENTS.md snapshot: local / cs 1`] = `
"# Lazurio
<!-- base-instructions-2; {"preset":"local","profile":{"os":"macos","access":"local","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`local\` (verze 1).
- Pracovní stanice Principála bez handoveru; Owner i Principál je přihlášený uživatel.
## Hranice
- Personalspace: \`personalspace/\` je intimní prostor právě jednoho Principála a jeho volitelného Buddyho. Nikdo cizí ho nečte a nikdy se nesdílí.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md; nadřazená pravidla drží root Lazurio (\`HumanAndMachines/Lazurio\`, AGENTS.md). Tenhle dokument je nenahrazuje.
- Ověř systém provádějící Mašiny (macos); přístup local nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
"
`;

exports[`rendered AGENTS.md snapshot: local / en 1`] = `
"# Lazurio
<!-- base-instructions-2; {"preset":"local","profile":{"os":"macos","access":"local","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`local\` (version 1).
- The Principal's own workstation, no handover; the signed-in user is both Owner and Principal.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md; the overarching rules are the Lazurio root (\`HumanAndMachines/Lazurio\`, AGENTS.md). This document does not replace them.
- Verify the execution Machine's OS (macos); local access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-personal / cs 1`] = `
"# Lazurio
<!-- base-instructions-2; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`hosted-personal\` (verze 1).
- Mašina: \`example\` (personal-vm).
- Owner: Principál s GitHub loginem \`example\` (id 12345). Je to jeho jediná osobní hostovaná Mašina.
- Principál: Owner Mašiny. Agenti tu jednají za něj v jeho právech; Buddy je volitelný rezident téže Mašiny.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; vyšší doména správy a obnovy než tahle Mašina.
## Hranice
- Personalspace: \`personalspace/\` je intimní prostor právě jednoho Principála a jeho volitelného Buddyho. Nikdo cizí ho nečte a nikdy se nesdílí.
- Organizace: na osobní Mašině nejsou namountovaná žádná Organization repa. Práce v Organizaci probíhá na Mašinách, které Organizace vlastní.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md; nadřazená pravidla drží root Lazurio (\`HumanAndMachines/Lazurio\`, AGENTS.md). Tenhle dokument je nenahrazuje.
- Ověř systém provádějící Mašiny (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-personal / en 1`] = `
"# Lazurio
<!-- base-instructions-2; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-personal\` (version 1).
- Machine: \`example\` (personal-vm).
- Owner: the Principal with GitHub login \`example\` (id 12345). This is their one personal hosted Machine.
- Principal: the Machine's Owner. Agents here act for them within their rights; a Buddy is an optional resident of this same Machine.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: no Organization repositories are mounted on a personal Machine. Organization work happens on Machines the Organization owns.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md; the overarching rules are the Lazurio root (\`HumanAndMachines/Lazurio\`, AGENTS.md). This document does not replace them.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-personal / cs 1`] = `
"# Lazurio
<!-- base-instructions-2; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`hosted-organization-personal\` (verze 1).
- Mašina: \`workspace\` (workspace-vm).
- Owner: Organizace \`example\`.
- Principál: jediný Operátor, kterému Organizace tuhle pracovní VM přiřadila. Agenti jednají za něj v jeho živých právech.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; vyšší doména správy a obnovy než tahle Mašina.
## Hranice
- Personalspace: na Mašině vlastněné Organizací nikdy není. Nezakládej ho, nemountuj ho a nekopíruj sem osobní data ani přihlášení.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: Principálova vlastní přihlášení; GitHub je jediná autorita přístupů.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md; nadřazená pravidla drží root Lazurio (\`HumanAndMachines/Lazurio\`, AGENTS.md). Tenhle dokument je nenahrazuje.
- Ověř systém provádějící Mašiny (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-personal / en 1`] = `
"# Lazurio
<!-- base-instructions-2; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-personal\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Principal: the one operator the Organization assigned this work VM to. Agents act for them within their live rights.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md; the overarching rules are the Lazurio root (\`HumanAndMachines/Lazurio\`, AGENTS.md). This document does not replace them.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-team / cs 1`] = `
"# Lazurio
<!-- base-instructions-2; {"preset":"hosted-organization-team","profile":{"os":"linux","access":"remote","purpose":"human","locale":"cs","detail":"concise","coordination":"direct"}} -->
## Tahle Mašina
- Preset: \`hosted-organization-team\` (verze 1).
- Mašina: \`workspace\` (workspace-vm).
- Owner: Organizace \`example\`, Team \`sample-team\`.
- Principál: Kolega, který se právě připojil. OS účet je sdílený členy Teamu a není osoba; změny se připisují Teamu přes brokerovanou identitu Organizace.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; vyšší doména správy a obnovy než tahle Mašina.
## Hranice
- Personalspace: na Mašině vlastněné Organizací nikdy není. Nezakládej ho, nemountuj ho a nekopíruj sem osobní data ani přihlášení.
- Organizace: repozitáře žijí v \`organizations/<org>/\`; každá Organizace je vlastní access hranice a vlastní git repozitář.
- Identita: brokerovaná identita Organizace s krátkodobými tokeny; žádná osobní přihlášení, session ani credentials sem nikdy nepatří.
## Jak se tu pracuje
- Komunikuj česky, pokud uživatel nepožádá jinak.
- Začni výsledkem a vysvětluj stručně.
- Pracuj přímo v rozsahu zadání a dostupných nástrojů.
- Tvoje práce je Draft ve worktree a pull requestu; Publikace (merge, nasazení, odeslání) patří Principálovi a vyžaduje jeho explicitní pokyn v aktuálním threadu.
- Před prací v Organizaci načti její aktuální AGENTS.md; nadřazená pravidla drží root Lazurio (\`HumanAndMachines/Lazurio\`, AGENTS.md). Tenhle dokument je nenahrazuje.
- Ověř systém provádějící Mašiny (linux); přístup remote nemění identitu ani oprávnění. Pro připojené operace ověř živou identitu a práva; lokální checkout není důkaz oprávnění.
- Profil neuděluje přístup, publikační mandát ani oprávnění k práci na pozadí. Nečti cizí Personalspace a nekopíruj přihlašovací údaje.
- Zachovej existující cesty a obsah Organizations a Personalspace. Jazyk profilu nepřejmenovává složky ani nepřekládá uživatelská data.
- Chybějící nástroje, neověřená práva a neznámý stav přiznej; nevymýšlej dostupné schopnosti ani úspěšné dokončení.
"
`;

exports[`rendered AGENTS.md snapshot: hosted-organization-team / en 1`] = `
"# Lazurio
<!-- base-instructions-2; {"preset":"hosted-organization-team","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-team\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`, Team \`sample-team\`.
- Principal: whichever Team member is connected now. The OS account is shared by the Team and is not a person; changes are attributed to the Team through the brokered Organization identity.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the brokered Organization identity with short-lived tokens; no personal sign-ins, sessions or credentials ever belong here.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md; the overarching rules are the Lazurio root (\`HumanAndMachines/Lazurio\`, AGENTS.md). This document does not replace them.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
"
`;

exports[`relationships render only when the recorded binding carries them 1`] = `
"# Lazurio
<!-- base-instructions-2; {"preset":"hosted-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-personal\` (version 1).
- Machine: \`example\` (personal-vm).
- Owner: the Principal with GitHub login \`example\` (id 12345). This is their one personal hosted Machine.
- Principal: the Machine's Owner. Agents here act for them within their rights; a Buddy is an optional resident of this same Machine.
- Tailnet: Headscale node \`example\`.
- Host: provider-estate \`example-estate\`; a higher administration and recovery domain than this Machine.
### Related Machines
- \`example-laptop\` (personal client): both directions.
- \`example-work\` (work VM): reachable from here.
## Boundaries
- Personalspace: \`personalspace/\` is the intimate space of exactly one Principal and their optional Buddy. Nobody else reads it and it is never shared.
- Organizations: no Organization repositories are mounted on a personal Machine. Organization work happens on Machines the Organization owns.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md; the overarching rules are the Lazurio root (\`HumanAndMachines/Lazurio\`, AGENTS.md). This document does not replace them.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
"
`;

exports[`the Owner line names the Team only under hosted-organization-team 1`] = `
"# Lazurio
<!-- base-instructions-2; {"preset":"hosted-organization-personal","profile":{"os":"linux","access":"remote","purpose":"human","locale":"en","detail":"concise","coordination":"direct"}} -->
## This Machine
- Preset: \`hosted-organization-personal\` (version 1).
- Machine: \`workspace\` (workspace-vm).
- Owner: Organization \`example\`.
- Principal: the one operator the Organization assigned this work VM to. Agents act for them within their live rights.
- Tailnet: Headscale node \`example-workspace\`.
- Host: virtualization-host \`example-host\`; a higher administration and recovery domain than this Machine.
## Boundaries
- Personalspace: never present on an Organization-owned Machine. Do not create or mount one and never copy personal data or sign-ins here.
- Organizations: repositories live under \`organizations/<org>/\`; each Organization is its own access boundary and its own git repository.
- Identity: the Principal's own sign-ins; GitHub is the only access authority.
## How work is done here
- Communicate in English unless the user requests otherwise.
- Lead with the outcome and explain concisely.
- Work directly within task scope and available tools.
- Your work is a Draft in a worktree and a pull request; Publication (merge, deploy, send) belongs to the Principal and needs their explicit instruction in the current thread.
- Before Organization work, load its current AGENTS.md; the overarching rules are the Lazurio root (\`HumanAndMachines/Lazurio\`, AGENTS.md). This document does not replace them.
- Verify the execution Machine's OS (linux); remote access changes neither identity nor permissions. Verify live identity and rights for connected operations; a local checkout is not proof of permission.
- A profile grants no access, publication mandate or background-work authority. Do not read another Principal's Personalspace or copy credentials.
- Preserve existing Organizations and Personalspace paths and content. Profile language neither renames folders nor translates user data.
- Report missing tools, unverified rights and unknown state; do not invent available capabilities or successful completion.
"
`;
